--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -236,6 +236,9 @@ Importing these strings will override all data in '%s'. Continue?=Importing thes
 There are no strings to export for this language.=There are no strings to export for this language.
 This will permanently delete '%s'. Continue?=This will permanently delete '%s'. Continue?
 
+[LowLevelWindow_SDL]
+Failed to create an SDL window=Failed to create an SDL window
+
 [LowLevelWindow_X11]
 Failed to establish a connection with the X server=Failed to establish a connection with the X server
 
